--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,21 @@
+name: cat-service
+
 services:
-  #  cat-service:
-  #    build: .
-  #    depends_on:
-  #      postgres:
-  #        condition: service_healthy
-  #      kafka:
-  #        condition: service_healthy
-  #    environment:
-  #      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/postgres
-  #      SPRING_DATASOURCE_USERNAME: postgres
-  #      SPRING_DATASOURCE_PASSWORD: postgres
-  #      SPRING_KAFKA_BOOTSTRAP_SERVERS: kafka:9092
-  #      SPRING_KAFKA_CONSUMER_GROUP_ID: cat-service
-  #      SPRING_KAFKA_CONSUMER_AUTO_OFFSET_RESET: earliest
-  #      SPRING_KAFKA_CONSUMER_KEY_DESERIALIZER: org.apache.kafka.common.serialization.StringDeserializer
-  #      SPRING_KAFKA_CONSUMER_VALUE_DESERIALIZER: org.springframework.kafka.support.serializer.JsonDeserializer
-  #      SPRING_KAFKA_CONSUMER_PROPERTIES_SPRING_JSON_TRUSTED_PACKAGES: "*"
-  #      SPRING_KAFKA_CONSUMER_PROPERTIES_SPRING_JSON_VALUE_DEFAULT_TYPE: cat_service.dto.KafkaRequest
+  app:
+    build: .
+    container_name: app
+    depends_on:
+      postgres:
+        condition: service_healthy
+      kafka:
+        condition: service_healthy
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/postgres
+      SPRING_DATASOURCE_USERNAME: postgres
+      SPRING_DATASOURCE_PASSWORD: postgres
+      SPRING_KAFKA_BOOTSTRAP_SERVERS: kafka:9092
+      BOT_TOKEN: _
+      SESSION_TIMEOUTDAYS: 1
 
   postgres:
     image: postgres:17
@@ -35,6 +34,7 @@ services:
 
   zookeeper:
     image: confluentinc/cp-zookeeper:7.5.0
+    container_name: zookeeper
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
     ports:
@@ -42,6 +42,7 @@ services:
 
   kafka:
     image: confluentinc/cp-kafka:7.5.0
+    container_name: kafka
     depends_on:
       - zookeeper
     ports:
@@ -50,7 +51,7 @@ services:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_INTERNAL:PLAINTEXT
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092,PLAINTEXT_INTERNAL://kafka:29092
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092,PLAINTEXT_INTERNAL://kafka:29092
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
     healthcheck:
       test: [ "CMD-SHELL", "kafka-topics --bootstrap-server localhost:9092 --list" ]
