--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,7 +19,7 @@ spring:
     bootstrap-servers: localhost:9092
 
 bot:
-  token: 8128054626:AAFHymkyQyLhQ7JDd9NH_fqcYKJ_Mv1l53Y
+  token: _
 
 session:
   timeoutDays: 1
